# Cripto

./: pyproject.toml  runtime.txt
cripto/: app.py  funciones.py
cripto/assets/: style.css
tests/: test_cripto.py
